2004-06-18  Jackson Harper  <jackson@ximian.com>

	* man/mono.1: Add MONO_LOG_LEVEL and MONO_LOG_MASK. Add
	instructions on setting multiple mask values.
		
Fri Jun 18 19:39:09 CEST 2004 Paolo Molaro <lupus@ximian.com>

	* Makefile.am: process data before runtime, so the config file is
	installed and gacutil has a chance to work (finding symlink).

2004-06-18  Raja R Harinath  <rharinath@novell.com>

	* runtime/Makefile.am ($(monoone_DATA) $(monotwo_DATA) $(monobins_DATA)): 
	Test if files exist in the mcs/ tree before creating symlinks.
	Remove symlinks before creating them again.
	* runtime/net_1_1/Makefile.am (mscorlib.dll $(gac_assemblies)): Likewise.
	* runtime/net_2_0/Makefile.am (mscorlib.dll $(gac_assemblies)): Likewise.

2004-06-18  Raja R Harinath  <rharinath@novell.com>

	* scripts/Makefile.am (REWRITE): New.  Common rewriting 'sed' command.
	(bin_SCRIPTS): Unify all the script generating rules into one.

2004-06-16  Raja R Harinath  <rharinath@novell.com>

	* Makefile.am (bootstrap) [PLATFORM_WIN32]: Open code.  Don't
	build and populate net_2_0 profile.
	(populate-runtime-subdir): Make into subroutine that takes list of
	profiles to populate.
	(faststrap): Update.
	(MCS_DIRS, MCS_FILES, MONO_CSHARP_DEBUGGER_DIR,	MONO_CSHARP_DEBUGGER_FILE): 
	Avoid automake conditional/+= problems.
	(populate-runtime-subdir): Rewrite sanity check.

2004-06-16  Raja R Harinath  <rharinath@novell.com>

	Include prototype completely-untested 'make bootstrap' support for W32.
	* Makefile.am (bootstrap): Define to fasterstrap for W32.
	(MCS_DIRS, MCS_FILES): Don't refer to Mono.CSharp.Debugger in W32.
	(tmpinst-dir): Change sub-make invoke to ...
	(tmpinst-dir-contents): ... this.  Build 'mono.bat' in W32 instead
	of 'mono' and 'mcs'.
	($(tmpinst)/bin/mono.bat): New.

2004-06-15  Dick Porter  <dick@ximian.com>

	* configure.in: Check for struct ip_mreqn and struct ip_mreq on
	windows too.  Fixes bug 55040.

Mon Jun 14 18:38:34 CEST 2004 Paolo Molaro <lupus@ximian.com>
